--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -10,7 +10,11 @@ color: white; /* Reset text color to its default value on hover */
 background-image: linear-gradient(to left,#FF512F 0%, #F09819  100%);
 }
 
-
+model-viewer {
+  width: 400px;
+  height: 300px;
+  margin: 0, auto;
+}
 
   /* .btn-grad:hover {
     background-position: right center; // change the direction of the change here 
